
- Fix for :meth:`File.renameNode` where in certain cases
  :meth:`File._g_updateLocation` was wrongly called (closes :issue:`208`).
  Thanks to Michka Popoff.

- Fixed ptdump failure on data with nested columns (closes :issue:`213`).
  Thanks to Alexander Ford.

- Fixed an error in :func:`open_file` when filename is a :class:`numpy.str_`
  (closes :issue:`204`)

- Fixed :issue:`119`, where an index on Time64Col (only, Time32Col was ok)
  hides the data on selection from a Tables

.. _Python: http://www.python.org
.. _PEP8: http://www.python.org/dev/peps/pep-0008
.. _PyInstaller: http://www.pyinstaller.org
.. _Blosc: https://github.com/FrancescAlted/blosc
.. _bzip2: http://www.bzip.org
.. _Cython: http://www.cython.org
.. _Numexpr: http://code.google.com/p/numexpr
.. _numpy: http://www.numpy.org
.. _`download area`: http://sourceforge.net/projects/pytables/files/pytables
.. _`Travis-CI`: https://travis-ci.org


Changes from 2.3.1 to 2.4
=========================

New features
------------

- Improved HDF5 error logging management:

  * added a new function, :func:`silenceHDF5Messages`, for suppressing
    (and re-enabling) HDF5 messages.  By default HDF5 error logging is now
    suppressed. Closes :issue:`87`.
  * now all HDF5 error messages and trace-backs are trapped and attached to
    the :exc:`exceptions.HDF5ExtError` exception instances.
    Closes :issue:`120`.

- Added support for the float16 data type.  It is only available if numpy_
  provides it as well (i.e. numpy_ >= 1.6).  See :issue:`51`.

- Leaf nodes now have attributes for retrieving the size of data in memory
  and on disk.  Data on disk can be compressed, so the new attributes make it
  easy to compute the data compression ration.
  Thanks to Josh Ayers (close :issue:`141`).

- The maximum number of threads for Blosc_ and Numexpr_ is now handled using
  the :data:`parameters.MAX_BLOSC_THREADS` and
  :data:`parameters.MAX_NUMEXPR_THREADS` parameters respectively.